--- a/pages/backend/style.css
+++ b/pages/backend/style.css
@@ -169,11 +169,8 @@ footer {
     }
 
     .image-introduction {
-        width: 60%;
+        width: 100%;
         height: 80%;
-        margin-top: 2rem;
-        margin-left: 2rem;
-        margin-right: 2rem;
     }
 
     .backend-main-text {
@@ -196,7 +193,8 @@ footer {
     }
 
     .image-link {
-        width: 20rem;
+        width: 80%;
+        min-width: 280px;
         height: 40rem;
         padding: 1rem;
         align-self: center;
@@ -232,8 +230,10 @@ footer {
     .card {
         display: flex;
         flex-direction: column;
+        justify-content: center;
         border-radius: 5px;
-        width: 7rem;
+        width: 80%;
+        margin-top: 1rem;
     }
 
     .card>img {
@@ -271,6 +271,16 @@ footer {
         align-items: center;
     }
 
+    #courses-cards-section{
+        margin-top: 1rem;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+        align-items: center;
+        width: 80%;
+        min-width: 300px;
+    }
+
     #links-section {
         display: flex;
         flex-direction: column;
@@ -280,14 +290,15 @@ footer {
     }
 
     .flip-card {
-        width: 3rem;
-        height: 3rem;
+        width: 6rem;
+        height: 6rem;
+        margin-top: 2rem;
         perspective: 1000px;
     }
 
     .image-flip-card {
-        width:  3rem;
-        height:  3rem;
+        width:  6rem;
+        height:  6rem;
     }
 
     .flip-card-inner {
@@ -309,6 +320,17 @@ footer {
         -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
         font-size: 8px;
+    }
+
+    #tech-cards {
+        margin-top: 1rem;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        min-width: 300px;
+        
     }
 
     #tech-title {
@@ -421,6 +443,7 @@ footer {
         padding: 2rem 4rem 2rem 4rem;
         align-items: center;
     }
+    
 
     #course-section-header {
         font-size: 18px;
@@ -537,6 +560,8 @@ footer {
         width: 100%;
         min-width: 300px;
     }
+
+ 
 
     #tech-title {
         font-size: 18px;
