--- a/pages/frontend/style.css
+++ b/pages/frontend/style.css
@@ -184,7 +184,7 @@ footer {
   color: #e5e7eb;
 }
 
-@media only screen and (max-width: 414px) {
+@media only screen and (min-width: 0px) {
   /* For Mobile: */
   header {
     display: flex;
